--- a/css.css
+++ b/css.css
@@ -55,16 +55,17 @@ hr {
 }
 
 .btn {
-  background-color: rgba(50, 48, 47, 1);
-  color: rgb(213, 196, 161);
-  padding: 5px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-flex;
+	background-color: rgba(50, 48, 47, 1);
+	color: rgb(213, 196, 161);
+	padding: 5px;
+	margin-bottom: 5px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-flex;
 }
 
 .btn:hover {
-  background-color: rgb(213, 196, 161);
-  color: rgb(50, 48, 47);
-  padding: 5px;
+	background-color: rgb(213, 196, 161);
+	color: rgb(50, 48, 47);
+	padding: 5px;
 }
