--- a/css.css
+++ b/css.css
@@ -14,6 +14,20 @@ hr {
 	border-radius:50%;
 }
 
+pre {
+	font-family: monospace;
+	border: 1px solid rgb(213, 196, 161);
+	overflow-x: auto;
+	width:min-content;
+	color: white;
+	background: black;
+	border-radius: 5px;
+}
+
+a {
+	color: cyan;
+}
+
 .cud {
 	position: fixed; 
 	bottom: 0; 
